--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
+    "@types/react-table": "^7.7.14",
     "axios": "^1.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.4.0",
+    "react-table": "^7.8.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
     "@rollup/plugin-alias": "^5.0.0",
+    "@tanstack/react-table": "^8.9.1",
     "@types/node": "^18.15.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
