--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-table": "^7.7.14",
     "axios": "^1.4.0",
+    "clsx": "^1.2.1",
     "fuse.js": "^6.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
