--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "fuse.js": "^6.6.2",
+    "immer": "^10.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.43.9",
