--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
     "@parcel/watcher": "^2.2.0",
     "@rollup/plugin-alias": "^5.0.0",
+    "@tailwindcss/forms": "^0.5.4",
     "@tanstack/react-table": "^8.9.1",
     "@types/node": "^18.15.13",
     "@types/react": "^18.0.0",
