--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/react-table": "^7.7.14",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "fuse.js": "^6.6.2",
     "graphql": "^16.6.0",
     "immer": "^10.0.2",
     "react": "^18.0.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
@@ -38,6 +40,7 @@
     "@tanstack/react-table": "^8.9.1",
     "@types/node": "^18.15.13",
     "@types/react": "^18.0.0",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^1.3.2",
