--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.8.0",
     "@hookform/resolvers": "^3.1.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/ramda": "^0.29.4",
     "@types/react-table": "^7.7.14",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
@@ -20,6 +21,7 @@
     "fuse.js": "^6.6.2",
     "graphql": "^16.6.0",
     "immer": "^10.0.2",
+    "ramda": "^0.29.0",
     "react": "^18.0.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.0.0",
