--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.43.9",
+    "react-jss": "^10.10.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.0",
     "react-table": "^7.8.0",
+    "react-tether": "^3.0.1",
     "yup": "^1.1.1"
   },
   "devDependencies": {
@@ -44,7 +46,9 @@
     "@types/react": "^18.0.0",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-jss": "^10.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-virtualized": "^9.21.22",
     "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
