--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@apollo/client": "^3.8.0",
     "@hookform/resolvers": "^3.1.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/ramda": "^0.29.4",
     "@types/react-table": "^7.7.14",
     "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "fuse.js": "^6.6.2",
@@ -31,6 +34,7 @@
     "react-router-dom": "^6.4.0",
     "react-table": "^7.8.0",
     "react-tether": "^3.0.1",
+    "tailwind-merge": "^1.14.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
